[package]
name = "icxp"
version = "0.1.0"
authors = ["nshou <nshou@coronocoya.net>"]
edition = "2018"

[[bin]]
name = "icxpd"
path = "src/icxpd/main.rs"

[[bin]]
name = "icxpc"
path = "src/icxpc/main.rs"

[dependencies]
dirs = "3.0.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "io-util", "macros"] }
