[package]
name = "icxp"
version = "0.1.0"
authors = ["nshou <nshou@coronocoya.net>"]
edition = "2018"

[[bin]]
name = "icxpd"
path = "src/icxpd/main.rs"

[[bin]]
name = "icxpc"
path = "src/icxpc/main.rs"

[dependencies]
dirs = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "io-util", "macros", "time", "process"] }

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }