[package]
name = "icxp"
version = "0.1.0"
authors = ["nshou <nshou@coronocoya.net>"]
edition = "2018"

[[bin]]
name = "icxpd"
path = "src/icxpd/main.rs"

[[bin]]
name = "icxpc"
path = "src/icxpc/main.rs"

[dependencies]
chrono = "0.4"
dirs = "3.0"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "io-util", "macros", "time"] }

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }